--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/icons": "^4.11.2",
     "@types/react-redux": "^7.1.22",
+    "axios": "^0.26.0",
     "next": "12.0.10",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
